--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
     <!--<script src="https://d3js.org/d3.v6.min.js"></script>-->
     <script src="script.js"></script>
    
-    
+    <!--added comment for trial-->
 </body>
 </html>
