--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>UK Town Map</title>
+    <meta charset="UTF-8">
+    <title>D3 JSON Map</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         #map {
             height: 500px;
@@ -13,7 +15,7 @@
 <body>
     <div id="map"></div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUYWkLZ-pXWF2x28qOdEJHixOXTcBo2f8&callback=initMap"></script>
-    <!--<script src="https://d3js.org/d3.v6.min.js"></script>-->
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="script.js"></script>
    
 
