--- a/d3-json-map/index.html
+++ b/d3-json-map/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="map"></div>
 <script src="https://d3js.org/d3.v7.min.js"></script>
-<script src="script2.js"></script>
+<script src="script.js"></script>
 </body>
 
 </html>
