--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     
 </head> 
 <body>
-    
+
     <div id="map"></div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUYWkLZ-pXWF2x28qOdEJHixOXTcBo2f8&callback=initMap"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="script.js"></script>
    
+    <button type="button" onclick="window.location.reload()">Refresh Me</button>
 
 </body>
 </html>
