--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <style>
         #map {
-            height: 500px;
+            height: 600px;
             width: 100%;
         }
     </style>
@@ -19,7 +19,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="script.js"></script>
    
-    <button type="button" onclick="window.location.reload()">Refresh Me</button>
+    <button type="button" onclick="window.location.reload()">Generate New Towns</button>
 
 </body>
 </html>
