--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="script.js"></script>
    
-    <button type="button" onclick="window.location.reload()">Generate New Towns</button>
-
+    <button type="button", onclick="window.location.reload()">Generate New Towns</button>
+    
 </body>
 </html>
