--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <script src="script.js"></script>
    
     <button type="button", onclick="window.location.reload()">Generate New Towns</button>
+    <input type="range" id="townsSlider" min="1" max="50" value="10" step="1">
+    <span id="sliderValue">10 towns</span>
     
 </body>
 </html>
