--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     <div id="map"></div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCUYWkLZ-pXWF2x28qOdEJHixOXTcBo2f8&callback=initMap"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     <script src="script.js"></script>
    
+    <!--Create button to refresh towns-->
     <button type="button", onclick="window.location.reload()">Generate New Towns</button>
 
+    <!--Create slider-->
     <input type="range" id="townsSlider" min="1" max="200" value="10" step="1">
     <span id="sliderValue">50 towns</span>
 
