--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--Create button to refresh towns-->
     <button type="button", onclick="window.location.reload()">Generate New Towns</button>
 
-    <!--Create slider-->
+    <!--Create slider to adjust number of town markers displayed-->
     <input type="range" id="townsSlider" min="1" max="200" value="10" step="1">
     <span id="sliderValue">50 towns</span>
 
